# usdfg-smart-contract

USDFG Smart Contract V1/: Anchor.toml  Cargo.toml  DEV_START_HERE.txt
USDFG Smart Contract V1/programs/usdfg_smart_contract/: Cargo.toml
USDFG Smart Contract V1/programs/usdfg_smart_contract/src/: lib.rs
USDFG Smart Contract/programs/usdfg_smart_contract/src/: lib.rs
USDFG Smart Contract/tests/: usdfg_smart_contract.ts
usdfg-smart-contract/: Anchor.toml  Cargo.toml  USDFG_DEVNET_README.txt
usdfg-smart-contract/programs/usdfg_smart_contract/: Cargo.toml
usdfg-smart-contract/programs/usdfg_smart_contract/src/: lib.rs
