[workspace]
members = [
    "programs/usdfg_smart_contract",
]
resolver = "2"

[workspace.dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["token"] }
solana-program = "1.18.20"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }

[profile.release]
overflow-checks = true

