[package]
name = "usdfg_smart_contract"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "usdfg_smart_contract"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.27.0"
anchor-spl = { version = "0.27.0", default-features = false, features = ["token"] }
solana-program = "1.17.17"
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }

[patch.crates-io]
# Force everything to use the classic SPL Token implementation only
spl-token-2022 = { git = "https://github.com/solana-labs/solana-program-library", package = "spl-token", rev = "v3.5.0" }
spl-token = { git = "https://github.com/solana-labs/solana-program-library", package = "spl-token", rev = "v3.5.0" }
