[package]
name = "usdfg_smart_contract"
version = "0.1.0"
description = "USDFG Smart Contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "usdfg_smart_contract"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token"] }
solana-program = "1.18.20"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
